# pano-native-components

./: .gitignore  Cargo.toml  DesktopWebView.java  PanoNativeComponents.java  Readme.md  copy-builds-to-pano-dir.bat  copy-builds-to-pano-dir.sh
.cargo/: config.toml
.github/workflows/: build.yml
native-webview/: Cargo.toml
native-webview/src/: gtk4_loop.rs  lib.rs  tao_loop.rs  webview_event.rs
pano-native-components/: Cargo.toml
pano-native-components/src/: discord.rs  discord_rpc.rs  file_picker.rs  ipc.rs  jni_callback.rs  lib.rs  machine_uid.rs  media_events.rs  media_info_structs.rs  notifications.rs  pano_tray.rs  theme_observer.rs  tokio_loop.rs  tray.rs  user_event.rs
pano-native-components/src/media_listener/: mod.rs  windows_smtc.rs
pano-native-components/src/media_listener/linux_mpris/: autostart.rs  metadata.rs  mod.rs  mpris_listener.rs  notification_manager.rs  notifications.rs  player_info_structs.rs
pano-native-components/src/media_listener/macos_mediaremote/: mediaremote_event.rs  ns_dictionary_extensions.rs
pano-native-components/src/windows_utils/: mod.rs  utils.rs
src/: lib.rs  machine_uid.rs  media_info_structs.rs  notifications.rs  pano_tray.rs  single_instance.rs  tao_event_loop.rs  user_event.rs  webview.rs  webview_event.rs
src/event_loop/: linux_tokio_loop.rs  macos_simple_loop.rs  mod.rs  windows_winit_loop.rs  winit_loop.rs
src/media_listener/: mod.rs  windows_smtc.rs
src/media_listener/linux_mpris/: mod.rs  mpris_listener.rs  player.rs
src/media_listener/macos_mediaremote/: mediaremote_listener.rs  mod.rs
src/media_listener/unix_mpris/: media_player2.rs  mod.rs  mpris_listener.rs  player_info_structs.rs
src/windows_registry_stuff/: mod.rs  registry_stuff.rs
src/windows_utils/: mod.rs  utils.rs
