[package]
name = "native-components"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["rt", "sync", "macros"] }
# discord-presence = { version = "1.4", features = ["activity_type"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.3", default-features = false, features = ["async-io"] }
futures-util = "0.3"
ksni = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
    "Media",
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "ApplicationModel",
] }
windows-registry = "0.4"
winit = "0.30"
tray-icon = { version = "0.19", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
dispatch2 = "0.2"
objc2-foundation = { version = "0.3", features = [
    "NSDictionary",
    "NSString",
    "NSValue",
] }
block2 = "0.6"
core-foundation = "0.10"

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"
