[package]
name = "native-components"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt", "sync", "macros", "time"] }
wry = { version = "0.51.2", default-features = false, features = [
    "os-webview",
    "protocol",
] }
winit = { version = "0.30", default-features = false, features = [
    "x11",
    "rwh_06",
] }
# discord-presence = { version = "1.4", features = ["activity_type"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.6", default-features = false, features = ["async-io"] }
futures-util = "0.3"
ksni = "0.3"
nix = { version = "0.30", default-features = false, features = ["fs"] }
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Media_Control",
    "Foundation_Collections",
    "ApplicationModel",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
] }
windows-registry = "0.5"
tray-icon = { version = "0.20", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
dispatch2 = "0.3"
objc2-foundation = { version = "0.3", features = [
    "NSDictionary",
    "NSString",
    "NSValue",
] }
block2 = "0.6"
core-foundation = "0.10"
core-services = "1.0.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"
