[package]
name = "native-webview"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
wry = { version = "0.55", default-features = false, features = ["os-webview"] }
tao = "0.35"

[target.'cfg(target_os = "linux")'.dependencies]
webkit6 = "0.6"
gtk4 = "0.11"
async-channel = "2"
