[package]
name = "pano-native-components"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.48", features = ["rt", "sync", "macros", "time"] }
interprocess = { version = "2.2", features = ["tokio"] }
discord-rich-presence = "1.0"
notify-rust = "4"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.12", default-features = false, features = ["async-io"] }
futures-util = "0.3"
ksni = "0.3"
ashpd = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Media_Control",
    "Storage_Streams",
    "Foundation_Collections",
    "ApplicationModel",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_Globalization",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
] }
windows-registry = "0.6"
